--- a/views/questions-single.hbs
+++ b/views/questions-single.hbs
@@ -17,7 +17,7 @@
                 <div class="row hide-on-med-and-up">
                     <div class="col s12 right-align">
                         <a href="/questions/{{question.id}}/favorite?sesh={{sesh}}" class="fav-button teal waves-effect waves-light btn">
-                        <i class="material-icons left">favorite</i>
+                        <i class="material-icons left">bookmark</i>
                         Favorite
                         </a>
                         <a href="/sole-create?sesh={{sesh}}&question={{question.id}}" class="teal waves-effect waves-light
@@ -86,10 +86,10 @@
         <div class="action-buttons-header hide-on-small-only">
             <a class="fav-button teal btn-floating btn-large waves-effect waves-light tooltipped"
                data-position="bottom"
-               data-tooltip="Favorite Question"
+               data-tooltip="Save Question"
                href="/questions/{{question.id}}/favorite?sesh={{sesh}}"
             >
-                <i class="material-icons">favorite</i>
+                <i class="material-icons">bookmark</i>
             </a>
             <a class="teal btn-floating btn-large waves-effect waves-light tooltipped"
                href="/sole-create?sesh={{sesh}}&question={{question.id}}"
@@ -104,7 +104,7 @@
 {{#if favorited}}
     <script>
         $('document').ready(function(){
-            var toastHTML = '<span>Added to Favorites</span><a href="mine?fav=active&sesh={{sesh}}" class="btn-flat toast-action">View</a>';
+            var toastHTML = '<span>Added to Saved</span><a href="mine?fav=active&sesh={{sesh}}" class="btn-flat toast-action">View</a>';
             M.toast({html: toastHTML})
         });
     </script>
