remove resetPassword. unneeded

--- a/views/login.hbs
+++ b/views/login.hbs
@@ -76,7 +76,7 @@
         <a class="modal-action modal-close waves-effect waves-red btn-flat">
             Cancel
         </a>
-        <a class="modal-action modal-close waves-effect waves-green btn-flat">
+        <a class="modal-action modal-close waves-effect waves-green btn-flat" onclick="resetPassword()">
             Send Reset Email
         </a>
     </div>
