update to admin page to organize charts and map filters

--- a/views/admin.hbs
+++ b/views/admin.hbs
@@ -19,9 +19,15 @@
                     <p>We've had {{usersToday}} new user(s) create accounts today.  You can view some monthly summary graphs below.</p>
                     <ul class="collapsible popout">
                         <li>
+                            <div class="collapsible-header"><i class="material-icons">accessibility_new</i>New Users (last 2 weeks)</div>
+                            <div class="collapsible-body center-align">
+                                <iframe width="610" height="381" frameborder="0" src="https://docs.google.com/spreadsheets/d/e/2PACX-1vTAud3Byx20AU8cV90dYh4BkGILQJC9GjkJZwsTdgJa6fVRIURiCiVCUOxiBrfCEw3fB0YfpAilj8w_/pubchart?oid=1848102389&amp;format=interactive"></iframe>
+                            </div>
+                        </li>
+                        <li>
                             <div class="collapsible-header"><i class="material-icons">accessibility_new</i>New Users</div>
                             <div class="collapsible-body center-align">
-                                <iframe width="610" height="381" frameborder="0" src="https://docs.google.com/a/startsole.org/spreadsheets/d/e/2PACX-1vTAud3Byx20AU8cV90dYh4BkGILQJC9GjkJZwsTdgJa6fVRIURiCiVCUOxiBrfCEw3fB0YfpAilj8w_/pubchart?oid=1228212082&amp;format=interactive"></iframe>
+                                <iframe width="610" height="381" src="https://docs.google.com/a/startsole.org/spreadsheets/d/e/2PACX-1vTAud3Byx20AU8cV90dYh4BkGILQJC9GjkJZwsTdgJa6fVRIURiCiVCUOxiBrfCEw3fB0YfpAilj8w_/pubchart?oid=1228212082&amp;format=interactive"></iframe>
                             </div>
                         </li>
                         <li>
