added card for sending in resource

--- a/views/resources.hbs
+++ b/views/resources.hbs
@@ -58,7 +58,23 @@
                                 </div>
                             {{/each}}
                         {{/if}}
-
+                        <div class="col m12 l6 show-all">
+                            <div class="resource-card card horizontal">
+                                <div class="card-image">
+                                    <img src="images/resources/your_resource_here.png">
+                                </div>
+                                <div class="card-stacked">
+                                    <div class="card-content">
+                                        <span class="card-title">Add Your Resource</span>
+                                        <p class="short-description">Do you have a great resource to share?  Let us know!</p>
+                                        <p class="text-description hide-on-large-only">If you've got a great SOLE resource, click the button below and send it our way!  We'll be happy to share it with our community and credit you for your work!</p>
+                                    </div>
+                                    <div class="card-action">
+                                        <a href="mailto:support@startsole.org">Contact Us</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
