--- a/views/home.hbs
+++ b/views/home.hbs
@@ -11,7 +11,7 @@
                 <br><br>
             </div>
             <div class="card-action center-align">
-                <a href="/soles?sesh={{sesh}}">View SOLEs</a>
+                <a href="/soles?sesh={{sesh}}">My SOLEs</a>
                 <a href="/questions?sesh={{sesh}}">Explore Questions</a>
                 {{#if roleData.isAdmin }}
                     <a class="red-text" href="/admin?sesh={{sesh}}">Admin</a>
