^help_why^help_text

--- a/views/soles-reflect.hbs
+++ b/views/soles-reflect.hbs
@@ -244,7 +244,7 @@
                         </div>
                     </div>
                     <div class="input-field col m12 l6">
-                        <input value="" id="help_text" type="text" class="validate">
+                        <input value="" id="help_text" name="help_text" type="text" class="validate">
                         <label class="active" for="help_text">If yes, please tell us a little more about your
                             challenge</label>
                     </div>
