--- a/views/history.hbs
+++ b/views/history.hbs
@@ -60,7 +60,7 @@
                   </div>
                   <div class="row">
                       <div class="col s3">
-                          <a href="http://www.nort2h.org/archived-episodes.html" target="_blank"><img
+                          <a href="https://www.youtube.com/watch?v=5iG60rTi79g&index=3&list=PLNaBQwIl4ddQCoKwi8f6nkkLrwyarFzAQ&t=0s" target="_blank"><img
                                   src="/images/what-is-sole/nort2h.jpg" alt="" class="responsive-img hide-on-small-only"></a>
                       </div>
                       <div class="col s12 m9">
